Add top bar with clickable link to index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<!-- ====== BARRE HAUT DE PAGE ====== -->
+    <div class="top-bar">
+        
+        <!-- Ligne gauche -->
+        <div class="line"></div>
 
+        <!-- Texte central cliquable -->
+        <!-- target="_blank" ouvre dans un nouvel onglet -->
+        <!-- rel="noopener noreferrer" est recommandé pour la sécurité -->
+        <a href="https://google.fr" 
+           target="_blank" 
+           rel="noopener noreferrer"
+           class="top-link">
+           Texte Haut
+        </a>
+
+        <!-- Ligne droite -->
+        <div class="line"></div>
+
+    </div>
+	
+<!-- ====== CORPS DE PAGE ====== -->
     <div class="page">
 
         <h1 id="instruction" style="display: none;">
